public/css/tf-styles.css
html, body {
    height: 100%;
}

body.search-open {
    overflow: hidden;
}

#trakfireapp {
	height: 100%;
}

#main-container {
	height: 100%;
}

#main-container > div{
	height: 100%;
}

.tf-player-wrap {
	width: 100%;
	height: 50px;
	z-index: 1000;
	background-color: #2f2f2f;
	position: fixed;
	bottom: 0;
  	left: 0;
  	box-shadow: 0 -1px black;
  	font-size: 12px;
}

.tf-player-wrap-inner {
	height: 100%;
	margin: 0 auto;
}

.tf-player-wrap-inner-votes {
	display: inline-block;
	position: relative;
	top: -23px;
	left: -32px;
	width: 64px;
	height: 64px;
	border: 2px solid #ff0d60;
	border-radius: 50%;
	background: black url("../assets/img/votes-arrow.svg") no-repeat center 15px;
	background-size: 12px;
	padding-top: 29px;
	padding-left: 1px;
	text-align: center;
	letter-spacing: 0.07em;
    cursor: pointer;
}

.tf-player-controls-wrap {
	display: inline-block;
	vertical-align: middle;
	top: -10px;
	left: -4px;
	position: relative;
}

.tf-player-controls-wrap-info {
	display: inline-block;
	vertical-align: middle;
	top: 0px;
	left: 0px;
	position: relative;
	float: right;
}
.tf-player-backward,
.tf-player-play,
.tf-player-pause,
.tf-player-forward {
	display: inline-block;
	position: relative;
	width: 23px;
	height: 30px;
	top: -4px;
	margin-right: 4px;
}

.tf-player-backward {
	background: url("../assets/img/player-backward.svg") no-repeat center;
}

.link-disabled {
	cursor: not-allowed;
	opacity: 0.25;
}

.tf-player-play {
	width: 27px;
	background: url("../assets/img/player-play.svg") no-repeat center;
}

.tf-player-pause {
	width: 27px;
	background: url("../assets/img/player-pause.svg") no-repeat center;
}

.tf-player-forward {
	background: url("../assets/img/player-forward.svg") no-repeat center;
}

.tf-player {
	width: 100%;
	height: 100%;
	background-color: rgba(0,0,0,0);
}

.tf-body {
	background-color: #1f1f1f;
	color: #fff;
	height: 100%;
}

.tf-day-header {
	color: #fff;
	max-height: 30px;
	font-family: "Benton Sans RE", sans-serif !important;
	text-align: left;
	margin-bottom: 20px;
	text-transform: uppercase;
}

.tf-post {
	background-color: #2f2f2f;
	color: #fff;
	margin-bottom: 10px;
}

.tf-upvote {
	background-color: #000;
}

.tf-selected {
	background-color: #fff;
	color: #ed2653;
}

.tf-tags {
	/*background-color: #ed2653;
	color: #fff;*/
	text-align: center;
}

.tf-user-avatar {
	display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 5px;
    margin-top: 10px;
}

.tf-player {
	background-color: #2f2f2f;
	color: #fff;
}

.tf-prof-pic {
	height: 40px;
	width: 40px;
}


.player, .info, {
	width: 50%;
	height: 100%;
	float: left;
	background-color: #404040;
}
.info img {
	max-height: 45px;
}
navbar, btn, table {
	border-radius: 0 !important;
}
.list-group {
  border-radius: 0 !important;
}

.list-group-item {
	border-radius: 0 !important;
	border: none;
	margin-bottom: 10px;
	background-color: #2f2f2f;
	color: #fff;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
  font-family: "Benton Sans RE", serif;
  -webkit-font-smoothing: antialiased;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
}

.table th, .table td {
     border-top: none !important;
     border-bottom: none !important;
     padding-top: 0px;
     padding-bottom: 0px;
 }
th.upvote-col {

	text-align: center;
}
.table {
	border-collapse: separate;
    border-spacing: 0 15px !important;
}
 .table tr {
 	margin-bottom: 100px !important;
 }
 .table tr .col-xs-1, .table tr .col-xs-2, .table tr .col-xs-7{
 	padding: 0px;
 }

.modal-title, .modal-body {
	color: #000;
}

.tf-meta {
	padding-top: 10px;
}

.tf-genre-tag {
	color: #ed2653;
}


.tf-thumbnail {
	max-width: 100px;
}

.tf-post-list {
	list-style: none;
	margin: 0px;
	padding-right: 70px;
	padding-left: 70px;
}

.tf-post-item {
	margin-bottom: 25px;
	width: 100%;
	height: 110px;
	cursor: pointer;
}

.tf-post-item div {
	display: inline-block;
	vertical-align: middle;

/*	float: left;
*/}

.tf-post-item--vote {

}

.tf-post-item--img {
}

.tf-post-item--info {
}

.tf-post-item--meta {

}

.tf-post-vote-btn {
	text-align: center;
	width: 100%;
	display: block;
}

.tf-day-wrapper h2 {
	width: 100%;
	text-align: center;
}

/* sams magic:; */

.tf-post-item-content {
	background-color: #191818;
	border: 1px solid #2B2B2B;
	border-radius: 4px;
	height: 100px;
	padding: 0px;
	width: 100%;
	position: relative;
}

/* votes */

.tf-post-item--votes {
	position: relative;
	border: 2px solid #ff0d60;
	width: 50px;
	color: #fff;
	background: #1C1C1C url("../assets/img/votes-arrow.svg") no-repeat center 20px;
	height: 50px;
	border-radius: 50%;
	margin-left: 0px;
	font-size: 11px;
    padding-top: 20px;
    text-align: center;
    font-size: 11px;
    letter-spacing: 0.07em;
    padding-left: 1px;
    cursor: pointer;
    z-index: 10;
}

/*#Post-list .tf-post-item .tf-post-item--votes {
	margin-left: -35px;
}*/

.tf-post-item--rank {
	height: 60px;
	padding-top: 18px;
	width: 80px;
	text-align: center;
	font-family: "Benton Sans RE", sans-serif;
	font-size: 19px;
	color: #fff;
	/*margin-left: 50px;*/
}

/*#Post-list .tf-post-item .tf-post-item--rank {
	width: 10px;
}

#Post-list .tf-post-item .tf-post-item--rank {
	width: 10px;
}*/

.is-upvoted {
	/*background-color: #ff0d60;*/
	background: #ff0d60;
}

/* img */

.tf-post-item--img{
	margin-top: 0px;
	height: 100px;
	overflow-y: hidden;
	z-index: 0;
	margin-right: 15px;
}

.tf-current-trak-content .tf-post-item--img {
	height: 100%;
	overflow-y: visible;
	margin-right: 0px;
}

.tf-newtrack-wrapper .tf-search-item-content .tf-post-item--img {
	margin-right: 0px !important;
}

.tf-newtrack-wrapper .tf-search-item-content .tf-post-item--info {
	margin-left: -20px !important;
}

.tf-current-trak-content .tf-trak-detail-vote {
	left: -34px !important;
	top: 75px !important;
}

.tf-current-trak-content .tf-post-item--votes {
	height: 70px; 
	width: 70px;
	padding-top: 30px;
}
/* ... */

